--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<title>AntCSS</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@5.0.0">
-	<link rel="stylesheet" href="ant.css">
+	<link rel="stylesheet" href="ant.min.css">
 </head>
 <body>
 	<button>Button</button>
 	<input type="text" value="ASdi wiajwde dd 43">
 	<input type="range">
+	<textarea>asd</textarea>
+	<select>
+		<option>Orange</option>
+		<option>Apple</option>
+		<option>Blue</option>
+		<option>What??</option>
+	</select>
 	<input type="checkbox">
 	<input type="radio">
 	<iframe></iframe>
