--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<input type="radio">
 	<iframe></iframe>
 	<img src="https://img-s-msn-com.akamaized.net/tenant/amp/entityid/AAKgeKr.img?h=416&w=799&m=6&q=60&u=t&o=f&l=f&x=558&y=362">
-	<div class="bgcR5" tabindex="0">Haha</div>
+	<div class="R5" tabindex="0">Haha</div>
 	<ul>
 		<li>Orange</li>
 		<li>Apple Orange</li>
